@@ -2713,7 +2713,7 @@ void R_RenderCubemapSide(sint cubemapIndex, sint cubemapSide,
         // FIXME: sun shadows aren't rendered correctly in cubemaps
         // fix involves changing r_FBufScale to fit smaller cubemap image size, or rendering cubemap to framebuffer first
         if(glRefConfig.framebufferObject && r_sunlightMode->integer &&
-                (r_forceSun->integer || tr.sunShadows)) {
+                r_depthPrepass->value && ((r_forceSun->integer) || tr.sunShadows)) {
             R_RenderSunShadowMaps(&refdef, 0);
             R_RenderSunShadowMaps(&refdef, 1);
             R_RenderSunShadowMaps(&refdef, 2);
